syntax = "proto3";

option go_package = "./;message";

package message;
// cd common/idl; protoc -I message  --go_out=message --go-grpc_out=message  message/message.proto
enum CmdType { // enum message type
    Login = 0;
    Heartbeat = 1;
    ReConn = 2;
    ACK = 3;
    UP = 4; // UP message
    Push = 5; // Push message
}


// top-level cmd pb structure
message MsgCmd{
   CmdType Type = 1;
   bytes Payload = 2;
}

// UP message
message UPMsg{
    UPMsgHead Head = 1;
    bytes UPMsgBody = 2;
 }
 
 // UP message header
message UPMsgHead{
    uint64 ClientID = 1;
    uint64 ConnID = 2;
 }

 message PushMsg{
     uint64 MsgID   = 1;
     uint64 SessionID = 2;
     bytes  Content = 3;
 }
// ACK message
message ACKMsg {
    uint32 Code = 1;
    string Msg = 2; 
    CmdType Type = 3;
    uint64 ConnID = 4;
    uint64 ClientID = 5;
    uint64 SessionID = 6;
    uint64 MsgID = 7;
}

// Login message
message LoginMsgHead {
     uint64 DeviceID = 1;
}

message LoginMsg {
   LoginMsgHead Head = 1;
   bytes LoginMsgBody = 2;
}

// Heartbeat message
message HeartbeatMsgHead {
}

message HeartbeatMsg {
  HeartbeatMsgHead Head = 1;
  bytes HeartbeatMsgBody = 2;
}

// Reconnect message
message ReConnMsgHead {
    uint64 ConnID = 1;
}

message ReConnMsg {
    ReConnMsgHead Head = 1;
    bytes ReConnMsgBody = 2;
}